--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "any-base": "^1.1.0",
     "bootstrap": "^4.0.0-beta.3",
     "jquery": "^1.9.1",
+    "lodash": "^4.17.4",
     "popper.js": "^1.12.9",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
